--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 				</div>
 				<div class="product-info">
 					<h1>{{ product }}</h1>
+					<p v-show="onSale">On Sale</p>
+					<p v-if="inventory > 10">In Stock</p>
+					<p v-else-if="inventory > 0">Almost sold out</p>
+					<p v-else>Out of Stock</p>
 					<p>{{ description }}</p>
 					<a :href="url">Google</a>
 				</div>
