--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<div id="app">
 		<div class="nav-bar"></div>
 
+		<div class="cart">Cart({{ cart }})</div>
+
 		<div class="product-display">
 			<div class="product-container">
 				<div class="product-image">
@@ -30,8 +32,11 @@
 						<li v-for="detail in details">{{detail}}</li>
 					</ul>
 					<a :href="url">Google</a>
-					<div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
+					<div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
 					<div v-for="size in sizes">{{size}}</div>
+					
+					<buton class="button" @click="addToCart">Add to Cart</buton>
+					<button class="button" @click="removeFromCart">Remove from Cart</button>
 				</div>
 			</div>
 		</div>
