--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 		<div class="product-display">
 			<div class="product-container">
 				<div class="product-image">
-					<img :src="image" alt="">
+					<img 
+						:src="image"
+						:class="{ 'out-of-stock-img': !inStock }"
+						alt="">
 				</div>
 				<div class="product-info">
 					<h1>{{ product }}</h1>
@@ -32,10 +35,22 @@
 						<li v-for="detail in details">{{detail}}</li>
 					</ul>
 					<a :href="url">Google</a>
-					<div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
+					<div
+						v-for="variant in variants" 
+						:key="variant.id" 
+						@mouseover="updateImage(variant.image)"
+						class="color-circle"
+						:style="{ backgroundColor: variant.color }">
+					</div>
 					<div v-for="size in sizes">{{size}}</div>
 					
-					<buton class="button" @click="addToCart">Add to Cart</buton>
+					<buton 
+						class="button"
+						:class="{ disabledButton: !inStock }"
+						:disabled="!inStock"
+						@click="addToCart">
+						Add to Cart
+					</buton>
 					<button class="button" @click="removeFromCart">Remove from Cart</button>
 				</div>
 			</div>
