--- a/index.html
+++ b/index.html
@@ -16,50 +16,14 @@
 
 		<div class="cart">Cart({{ cart }})</div>
 
-		<div class="product-display">
-			<div class="product-container">
-				<div class="product-image">
-					<img 
-						:src="image"
-						:class="{ 'out-of-stock-img': !inStock }"
-						alt="">
-				</div>
-				<div class="product-info">
-					<h1>{{ title }}</h1>
-					<p v-show="onSale">{{ title }} is on sale</p>
-					<p v-if="inStock > 10">In Stock</p>
-					<p v-else-if="inStock > 0">Almost sold out</p>
-					<p v-else>Out of Stock</p>
-					<p>{{ description }}</p>
-					<ul>
-						<li v-for="detail in details">{{detail}}</li>
-					</ul>
-					<a :href="url">Google</a>
-					<div
-						v-for="(variant, index) in variants" 
-						:key="variant.id" 
-						@mouseover="updateVariant(index)"
-						class="color-circle"
-						:style="{ backgroundColor: variant.color }">
-					</div>
-					<div v-for="size in sizes">{{size}}</div>
-					
-					<buton 
-						class="button"
-						:class="{ disabledButton: !inStock }"
-						:disabled="!inStock"
-						@click="addToCart">
-						Add to Cart
-					</buton>
-					<button class="button" @click="removeFromCart">Remove from Cart</button>
-				</div>
-			</div>
-		</div>
-	</div>
+		<product-display :premium="premium"></product-display>
 	</div>
 
 	<!-- Import App -->
 	<script src="./main.js"></script>
+	<!-- Import Component -->
+	<script src="./components/ProductDisplay.js"></script>
+	<script src="./components/ProductDetails.js"></script>
 
 	<!-- Mount App -->
 	<script>
